optimize packet creator
Signed-off-by: Jayesh Kharode <jayesh.kharode@technoforte.co.in>