@@ -29,4 +29,4 @@ done
 IFS=$' \t\n'
 
 java --version
-java -Dfile.encoding=UTF-8  -jar dslrig-packetcreator-*.jar --spring.config.location=./config/application.properties
+java -XX:+ExplicitGCInvokesConcurrent  -XX:+UseZGC -XX:+ZGenerational  -XX:MaxGCPauseMillis=200  -XX:+UnlockExperimentalVMOptions -XX:+UseStringDeduplication -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseCompressedOops -jar dslrig-packetcreator-*.jar --spring.config.location=./config/application.properties
